@@ -3,7 +3,7 @@ package com.livrolivre.security;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationManager; // IMPORTAÇÃO CORRETA
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,6 +16,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -33,16 +34,12 @@ public class SecurityConfig {
                 .cors(Customizer.withDefaults())
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(authorize -> authorize
-
-                        // 1. ROTAS PÚBLICAS (Login, Cadastro de Usuário e Leitura do Catálogo)
                         .requestMatchers(
                                 HttpMethod.POST,
                                 "/api/autenticacao/login",
                                 "/api/usuarios"
                         ).permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/livros/**").permitAll() // CATÁLOGO PÚBLICO CORRIGIDO
-
-                        // 2. ARQUIVOS ESTÁTICOS (HTML, CSS, JS)
+                        .requestMatchers(HttpMethod.GET, "/api/livros/**").permitAll()
                         .requestMatchers(
                                 "/",
                                 "/index.html",
@@ -57,21 +54,11 @@ public class SecurityConfig {
                                 "/css/**",
                                 "/js/**"
                         ).permitAll()
-
-                        // 3. ROTAS AUTENTICADAS (Escrita e Transações)
-
-                        // POST/DELETE/GET para CARRINHO (Adicionar/Remover/Ver)
                         .requestMatchers("/api/carrinho/**").authenticated()
-
-                        // POST/GET/DELETE para LIVROS (Cadastrar/Remover Catálogo Próprio)
                         .requestMatchers(HttpMethod.POST, "/api/livros").authenticated()
                         .requestMatchers(HttpMethod.DELETE, "/api/livros/**").authenticated()
-
-                        // POST/GET para TRANSAÇÕES (Pedir Doação, Propor Troca, Ver Histórico)
                         .requestMatchers(HttpMethod.POST, "/api/transacoes/**").authenticated()
                         .requestMatchers(HttpMethod.GET, "/api/transacoes/**").authenticated()
-
-                        // 4. Qualquer outra requisição exige autenticação
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
@@ -84,9 +71,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
